syntax = "proto3";

package grpcdomain;

/*		Command to rebuild from parent directory
=========================================================

protoc -I grpc/ --go_out=plugins=grpc:grpc \
	example_service.proto 
=========================================================
*/

service ExampleService {
	// ExampleRPC is an example RPC
	rpc ExampleRPC(ExampleRPCRequest) returns ( ExampleRPCReply) {}
}


message ExampleRPCRequest {
}

message ExampleRPCReply {
}